--- a/index.html
+++ b/index.html
@@ -2,22 +2,35 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Shifter | Benazoid</title>
+    <title>Benazoid</title>
     <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
     <link rel="stylesheet" href="w3.css">
+    <link rel="stylesheet" href="style.css">
     <style media="screen">
       img{
-        padding-top: 10px
+        padding-top: 10px;
+      }
+      .link {
+        width: 50;
+        height: 50;
+        fill: blue;
+        border: 5px,solid,black;
+        display: inline;
+        margin: 20px;
+        border-top: 20px;
       }
     </style>
   </head>
   <body>
-    <div class="w3-container">
-      <img src="benazoid.png" alt="Benazoid" width="200">
+    <a href="index.html"><img src="benazoid.png" alt="Benazoid" width="200"></a>
+    <br><br>
+    <a href="shifter.html" class="link">
+      Shifter
+    </a>
+    <a href="snake.html" class="link">
+      Snake
+    </a>
+    <div class="link" id="yes">
     </div>
-    <br>
-    <script src="p5.js"></script>
-    <script src="mod.js"></script>
-    <script src="sketch.js"></script>
   </body>
 </html>
