--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Benazoid</title>
-    <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
-    <link rel="stylesheet" href="w3.css">
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon.png"/>
+    <link rel="stylesheet" href="libraries/w3.css">
     <link rel="stylesheet" href="style.css">
     <style media="screen">
       img{
@@ -22,7 +22,7 @@
     </style>
   </head>
   <body>
-    <a href="index.html"><img src="benazoid.png" alt="Benazoid" width="200"></a>
+    <a href="index.html"><img src="images/benazoid.png" alt="Benazoid" width="200"></a>
     <br><br>
     <a href="shifter.html" class="link">
       Shifter
