--- a/snake.html
+++ b/snake.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Pool | Benazoid</title>
+    <title>Snake | Benazoid</title>
     <style media="screen">
       img{
         padding-top: 10px
