--- a/shifter.html
+++ b/shifter.html
@@ -17,7 +17,7 @@
     </div>
     <br>
     <script src="libraries/p5.js"></script>
-    <script src="mod.js"></script>
+    <script src="libraries/mod.js"></script>
     <script src="shifter.js"></script>
   </body>
 </html>
