--- a/shifter.html
+++ b/shifter.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Shifter | Benazoid</title>
-    <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon.png"/>
     <link rel="stylesheet" href="libraries/w3.css">
     <style media="screen">
       img{
