--- a/snake.html
+++ b/snake.html
@@ -15,6 +15,6 @@
     <script src="libraries/p5.collide2d.js"></script>
     <script src="snakeMod.js"></script>
     <script src="snakeBall.js"></script>
-    <script src="sketch.js"></script>
+    <script src="snake.js"></script>
   </body>
 </html>
