--- a/games/shifter/shifter.html
+++ b/games/shifter/shifter.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Shifter | Benazoid</title>
+    <link rel="shortcut icon" type="image/jpg" href="../../images/favicon.png"/>
+    <link rel="stylesheet" href="../../libraries/w3.css">
+    <link rel="stylesheet" href="../../style.css"></link>  </head>
+  <body>
+    <a href="../../index.html"><img src="../../images/benazoid.png" alt="Benazoid" width="200" id="benazoid"></a>
+    <script src="../../libraries/p5.js"></script>
+    <script src="shifter.js"></script>
+  </body>
+</html>
