--- a/games/snake/snake.html
+++ b/games/snake/snake.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Snake | Benazoid</title>
+    <link rel="stylesheet" href="../../style.css"></link>  </head>
+    <link rel="shortcut icon" type="image/jpg" href="../../images/favicon.png"/>
+  <body>
+    <a href="../../index.html"><img src="../../images/benazoid.png" alt="Benazoid" width="200" id="benazoid"></a>
+    <br>
+    <div id="snakeCanvas"></div>
+    <script src="../../libraries/p5.js"></script>
+    <script src="../../libraries/p5.collide2d.js"></script>
+    <script src="../../libraries/mod.js"></script>
+    <script src="snakeMod.js"></script>
+    <script src="snakeBall.js"></script>
+    <script src="snake.js"></script>
+  </body>
+</html>
