--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <body>
     <a href="index.html"><img src="images/benazoid.png" alt="Benazoid" width="200"></a>
     <br><br>
-    <a href="shifter.html" class="link">
+    <a href="games/shifter/shifter.html" class="link">
       Shifter
     </a>
-    <a href="snake.html" class="link">
+    <a href="games/snake/snake.html" class="link">
       Snake
     </a>
     <div class="link" id="yes">
