--- a/index.html
+++ b/index.html
@@ -5,31 +5,12 @@
     <title>Benazoid</title>
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.png"/>
     <link rel="stylesheet" href="libraries/w3.css">
-    <style media="screen">
-      img{
-        padding-top: 10px;
-      }
-      .link {
-        width: 50;
-        height: 50;
-        fill: blue;
-        border: 5px,solid,black;
-        display: inline;
-        margin: 20px;
-        border-top: 20px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css"></link>
   </head>
   <body>
-    <a href="index.html"><img src="images/benazoid.png" alt="Benazoid" width="200"></a>
-    <br><br>
-    <a href="games/shifter/shifter.html" class="link">
-      Shifter
-    </a>
-    <a href="games/snake/snake.html" class="link">
-      Snake
-    </a>
-    <div class="link" id="yes">
-    </div>
+    <a href="index.html"><img src="images/benazoid.png" alt="Benazoid" width="200" id="benazoid"></a>
+    <br><br><br>
+    <a href="games/shifter/shifter.html"><div class="link">Shifter</div></a>
+    <a href="games/snake/snake.html"><div class="link">Snake</div></a><br><br>
   </body>
 </html>
