--- a/index.html
+++ b/index.html
@@ -2,20 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Baldur | Benazoid</title>
-    <style media="screen">
-      img{
-        padding-top: 10px
-      }
-    </style>
+    <title>Benazoid</title>
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon.png"/>
+    <link rel="stylesheet" href="libraries/w3.css">
+    <link rel="stylesheet" href="style.css"></link>
   </head>
   <body>
-    <br>
-    <script src="libraries/p5.js"></script>
-    <script src="libraries/p5.collide2d.js"></script>
-    <script src="mod.js"></script>
-    <script src="boxes.js"></script>
-    <script src="player.js"></script>
-    <script src="sketch.js"></script>
+    <a href="index.html"><img src="images/benazoid.png" alt="Benazoid" width="200" id="benazoid"></a>
+    <br><br><br>
+    <a href="games/shifter/shifter.html"><div class="link">Shifter</div></a>
+    <a href="games/snake/snake.html"><div class="link">Snake</div></a><br><br>
   </body>
 </html>
