--- a/games/baldur/baldur.html
+++ b/games/baldur/baldur.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <br>
-    <script src="libraries/p5.js"></script>
-    <script src="libraries/p5.collide2d.js"></script>
+    <script src="../../libraries/p5.js"></script>
+    <script src="../../libraries/p5.collide2d.js"></script>
     <script src="mod.js"></script>
     <script src="boxes.js"></script>
     <script src="player.js"></script>
