--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="index.html"><img src="images/benazoid.png" alt="Benazoid" width="200" id="benazoid"></a>
     <br><br><br>
     <a href="games/shifter/shifter.html"><div class="link">Shifter</div></a>
-    <a href="games/snake/snake.html"><div class="link">Snake</div></a><br><br>
+    <a href="games/snake/snake.html"><div class="link">Snake</div></a>
+    <a href="games/baldur/baldur.html"><div class="link">Baldur</div></a><br><br>
   </body>
 </html>
