--- a/games/baldur/baldur.html
+++ b/games/baldur/baldur.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <br>
+    <a href="../../index.html"><img src="../../images/benazoid.png" alt="Benazoid" width="200" id="benazoid"></a>
     <script src="../../libraries/p5.js"></script>
     <script src="../../libraries/p5.collide2d.js"></script>
     <script src="mod.js"></script>
