--- a/games/baldur/baldur.html
+++ b/games/baldur/baldur.html
@@ -3,19 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Baldur | Benazoid</title>
-    <style media="screen">
-      img{
-        padding-top: 10px
-      }
-    </style>
-  </head>
-  <body>
-    <a href="../../index.html"><img src="../../images/benazoid.png" alt="Benazoid" width="200" id="benazoid"></a><br>
+    <link rel="shortcut icon" type="image/jpg" href="../../images/favicon.png"/><script src="../../libraries/p5.js"></script>
+    <script src="../../libraries/p5.collide2d.js"></script>
+
     <script src="../../libraries/p5.js"></script>
     <script src="../../libraries/p5.collide2d.js"></script>
     <script src="mod.js"></script>
     <script src="boxes.js"></script>
     <script src="player.js"></script>
     <script src="sketch.js"></script>
+  </head>
+  <body>
+    <a href="../../index.html"><img src="../../images/benazoid.png" alt="Benazoid" width="200" id="benazoid"></a><br>
   </body>
 </html>
