--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <body>
     <a href="index.html"><img src="images/benazoid.png" alt="Benazoid" width="200" id="benazoid"></a>
     <br><br><br>
+    <h2>Games</h2>
     <a href="games/shifter/shifter.html"><div class="link">Shifter</div></a>
-    <a href="games/snake/snake.html"><div class="link">Snake</div></a>
+    <a href="games/snake/snake.html"><div class="link">Snake</div>
     <a href="games/baldur/baldur.html"><div class="link">Baldur</div></a><br><br>
+    <h2>Visualizations</h2>
+    <a href="visualizations/fractals/fractals.html"><div class="link">Fractals</div></a>
+    <a href="visualizations/Mandlebrot Set/set.html"><div class="link">The Mandlebrot Set</div></a>
   </body>
 </html>
