--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <a href="games/baldur/baldur.html"><div class="link">Baldur</div></a><br><br>
     <h2>Visualizations</h2>
     <a href="visualizations/fractals/fractals.html"><div class="link">Fractals</div></a>
-    <a href="visualizations/Mandlebrot Set/set.html"><div class="link">The Mandlebrot Set</div></a>
+    <a href="visualizations/mandlebrot/set.html"><div class="link">The Mandlebrot Set</div></a>
   </body>
 </html>
