--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <h2>Games</h2>
     <a href="games/shifter/shifter.html"><div class="link">Shifter</div></a>
     <a href="games/snake/snake.html"><div class="link">Snake</div>
-    <a href="games/baldur/baldur.html"><div class="link">Baldur</div></a><br><br>
+    <a href="games/baldur/baldur.html"><div class="link">Baldur</div></a>
+    <a href="games/tetris/tetris.html"><div class="link">Tetris</div></a>
+    <br><br>
     <h2>Visualizations</h2>
     <a href="visualizations/fractals/fractals.html"><div class="link">Fractals</div></a>
     <a href="visualizations/mandlebrot/set.html"><div class="link">The Mandlebrot Set</div></a>
