--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <h2>Visualizations</h2>
     <a href="visualizations/fractals/fractals.html"><div class="link">Fractals</div></a>
     <a href="visualizations/mandlebrot/set.html"><div class="link">The Mandlebrot Set</div></a>
+    <a href="visualizations/raycaster/raycaster.html"><div class="link">Raycaster</div></a>
   </body>
 </html>
