--- a/visualizations/raycaster/raycaster.html
+++ b/visualizations/raycaster/raycaster.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <br>
-    <script src="p5.js"></script>
+    <script src="../../libraries/p5.js"></script>
     <script src="raycast.js"></script>
   </body>
 </html>
