--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <a href="visualizations/raycaster/raycaster.html"><div class="link">Raycaster</div></a>
     <br><br>
       
-      <p>Check out all of the source code at</p><a href="https://github.com/benazoid/benazoid.github.io">https://github.com/benazoid/benazoid.github.io</a>
+    <p>Check out all of the source code at </p><a href="https://github.com/benazoid/benazoid.github.io" target="_blank">https://github.com/benazoid/benazoid.github.io</a>
   </body>
 </html>
