--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     <br><br><br>
       
     <p>Check out all of the source code at </p><a href="https://github.com/benazoid/benazoid.github.io" target="_blank">https://github.com/benazoid/benazoid.github.io</a>
+    <br><br><br>
+      
+    <p>If you want some free coding lessons email me at benazoid00@gmail.com</p>
   </body>
 </html>
