--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <a href="visualizations/fractals/fractals.html"><div class="link">Fractals</div></a>
     <a href="visualizations/mandlebrot/set.html"><div class="link">The Mandlebrot Set</div></a>
     <a href="visualizations/raycaster/raycaster.html"><div class="link">Raycaster</div></a>
+    <a href="visualizations/Operators.html"><div class="link">Operators</div></a>
     <br><br><br>
       
     <p>Check out all of the source code at </p><a href="https://github.com/benazoid/benazoid.github.io" target="_blank">https://github.com/benazoid/benazoid.github.io</a>
