--- a/games/shifter2/shifter2Editor/editor.html
+++ b/games/shifter2/shifter2Editor/editor.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <script src="../libraries/p5.js" charset="utf-8"></script>
+    <script src="../../../libraries/p5.js" charset="utf-8"></script>
     <script src="editor.js" charset="utf-8"></script>
   </body>
 </html>
